Add script to migrate and seed database on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ services:
   - postgresql
 before_script:
   - psql -c 'CREATE DATABASE palette_picker_test;' -U postgres
-  
+  - npm run migrate-test
+  - npm run seed-test
+notifications:
+  email: false
 
   # add postgres
   # create database
