--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 services:
   - postgresql
 before_script:
-  - psql -c 'CREATE DATABASE palette_picker_test;' -U postgres
+  - psql -c 'CREATE DATABASE palette_picker;' -U postgres
   - npm run migrate-test
   - npm run seed-test
 notifications:
