--- a/package.json
+++ b/package.json
@@ -27,17 +27,18 @@
   "homepage": "https://github.com/misskelly/palette-picker-api#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "cors": "^2.8.5",
+    "express": "^4.15.2",
+    "jest": "^24.8.0",
     "knex": "^0.16.5",
-    "pg": "^7.11.0"
+    "pg": "^7.11.0",
+    "supertest": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "babel-jest": "^24.5.0",
     "eslint-config-airbnb": "^17.1.1",
-    "express": "^4.15.2",
-    "jest": "^24.8.0",
-    "nodemon": "^1.19.1",
-    "supertest": "^4.0.0"
+    "nodemon": "^1.19.1"
   }
 }
