Recreate palette_picker_test db

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ node_js:
 services:
   - postgresql
 before_script:
-  - psql -c 'CREATE DATABASE palette_picker;' -U postgres
-  - npm run migrate-test
-  - npm run seed-test
+  - psql -c 'CREATE DATABASE palette_picker_test;' -U postgres
+  # - npm run migrate-test
+  # - npm run seed-test
 notifications:
   email: false
 
