Fix typo in NODE_ENV, tests passing

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ services:
   - postgresql
 before_script:
   - psql -c 'CREATE DATABASE palette_picker_test;' -U postgres
-  # - npm run migrate-test
-  # - npm run seed-test
+  - npm run migrate-test
+  - npm run seed-test
 notifications:
   email: false
 
