--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/misskelly/palette-picker-api#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "cors": "^2.8.5",
     "knex": "^0.16.5",
     "pg": "^7.11.0"
   },
